--- a/prueba.html
+++ b/prueba.html
@@ -39,7 +39,11 @@
           4-columns-wide on medium screens,
           12-columns-wide on small screens  -->
                
-                <div class="p" id="escoger"></div>
+                <div class="p" id="escoger">
+                  <p class="e">Masculino</p>
+                  <p class="e">Femenino</p>
+                  <p class="e">Varios</p>
+                </div>
 
       </div>
 
@@ -52,9 +56,18 @@
           12-columns-wide on small screens  -->
            <p>Personajes</p>
           <div class="p" id="personajes">
-          <div class="animacionF">
-             <img class="animacion" src="imagenes/profesora.gif" alt="tutorial clases">
-           </div>
+              <div class="animacionF">
+                <img class="animacion" src="imagenes/profesora.gif" alt="tutorial clases">
+                </div>
+                <div class="animacionF2">
+                <img class="animacion2" src="imagenes/ironman.gif" alt="tutorial clases">
+                </div>
+                <div class="animacionF3">
+                <img class="animacion3" src="imagenes/frozen.gif" alt="tutorial clases">
+                </div>
+                <div class="animacionF4">
+                <img class="animacion4" src="imagenes/spiderman.gif" alt="tutorial clases">
+                </div>
             </div>
           
       </div>
